--- a/ParseTagram/Base.lproj/Main.storyboard
+++ b/ParseTagram/Base.lproj/Main.storyboard
@@ -130,7 +130,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="IEz-K4-equ">
-                                                    <rect key="frame" x="20" y="11" width="374" height="50"/>
+                                                    <rect key="frame" x="12" y="11" width="390" height="50"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="P5q-Z5-vZN">
                                                             <rect key="frame" x="0.0" y="0.5" width="50" height="49"/>
@@ -141,7 +141,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bA3-qo-mj6">
-                                                            <rect key="frame" x="58" y="0.0" width="316" height="50"/>
+                                                            <rect key="frame" x="58" y="0.0" width="332" height="50"/>
                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -155,17 +155,17 @@
                                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="150" id="YSj-0J-OB5"/>
                                                     </constraints>
                                                 </imageView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="xWW-QC-K9y">
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="xWW-QC-K9y">
                                                     <rect key="frame" x="20" y="381.5" width="374" height="20.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dr3-Cp-eK9">
-                                                            <rect key="frame" x="0.0" y="0.0" width="45" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="42.5" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="jhkjkjhjkjkjhjkhkjhkjkkjhjkjjklhjjjlhjkjklkhkjh" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UuX-z0-Dkd">
-                                                            <rect key="frame" x="53" y="0.0" width="321" height="20.5"/>
+                                                            <rect key="frame" x="50.5" y="0.0" width="323.5" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -177,7 +177,7 @@
                                                 <constraint firstItem="IEz-K4-equ" firstAttribute="top" secondItem="NKz-uz-6oT" secondAttribute="top" constant="11" id="0Ev-ld-ges"/>
                                                 <constraint firstItem="IEz-K4-equ" firstAttribute="centerX" secondItem="NKz-uz-6oT" secondAttribute="centerX" id="BoO-5X-9es"/>
                                                 <constraint firstItem="so7-20-KqR" firstAttribute="centerX" secondItem="NKz-uz-6oT" secondAttribute="centerX" id="IWW-V8-Er2"/>
-                                                <constraint firstAttribute="trailing" secondItem="IEz-K4-equ" secondAttribute="trailing" constant="20" symbolic="YES" id="QRb-RI-9RF"/>
+                                                <constraint firstAttribute="trailing" secondItem="IEz-K4-equ" secondAttribute="trailing" multiplier="0.98" constant="20" symbolic="YES" id="QRb-RI-9RF"/>
                                                 <constraint firstItem="xWW-QC-K9y" firstAttribute="centerX" secondItem="NKz-uz-6oT" secondAttribute="centerX" id="QpV-Mn-zHb"/>
                                                 <constraint firstItem="xWW-QC-K9y" firstAttribute="leading" secondItem="NKz-uz-6oT" secondAttribute="leading" constant="20" symbolic="YES" id="hpw-Yk-NI4"/>
                                                 <constraint firstItem="so7-20-KqR" firstAttribute="top" secondItem="IEz-K4-equ" secondAttribute="bottom" multiplier="1.2" constant="8" symbolType="layoutAnchor" id="iMr-Dg-Atj"/>
