--- a/ParseTagram/Base.lproj/Main.storyboard
+++ b/ParseTagram/Base.lproj/Main.storyboard
@@ -24,17 +24,17 @@
                                 <rect key="frame" x="30" y="417" width="368" height="36"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O7g-96-ueb" userLabel="Sign Up">
-                                        <rect key="frame" x="0.0" y="0.0" width="102" height="36"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="90" height="36"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
-                                        <state key="normal" title="Sign up"/>
+                                        <state key="normal" title="Sign In"/>
                                         <connections>
                                             <action selector="signInTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3Bx-v1-8QR"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8TN-xe-zsI" userLabel="Sign In">
-                                        <rect key="frame" x="218" y="0.0" width="150" height="36"/>
+                                        <rect key="frame" x="206" y="0.0" width="162" height="36"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
-                                        <state key="normal" title="Sign in"/>
+                                        <state key="normal" title="Sign Up"/>
                                         <connections>
                                             <action selector="signUpTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cEQ-Mj-Nty"/>
                                         </connections>
@@ -110,7 +110,7 @@
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="80.357142857142847"/>
         </scene>
-        <!--Feed View Controller-->
+        <!--Feed-->
         <scene sceneID="SLi-ar-7s7">
             <objects>
                 <viewController id="wQU-bY-PZZ" customClass="FeedViewController" customModule="ParseTagram" customModuleProvider="target" sceneMemberID="viewController">
@@ -119,7 +119,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UER-xf-KJA">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="676"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="feedCell" rowHeight="422" id="VN3-cy-6kU" customClass="FeedTableViewCell" customModule="ParseTagram" customModuleProvider="target">
@@ -159,15 +159,14 @@
                                                     <rect key="frame" x="20" y="381.5" width="374" height="20.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dr3-Cp-eK9">
-                                                            <rect key="frame" x="0.0" y="0.0" width="42.5" height="20.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="40" height="20.5"/>
+                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="jhkjkjhjkjkjhjkhkjhkjkkjhjkjjklhjjjlhjkjklkhkjh" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UuX-z0-Dkd">
-                                                            <rect key="frame" x="50.5" y="0.0" width="323.5" height="20.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
+                                                            <rect key="frame" x="48" y="0.0" width="326" height="20.5"/>
+                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
+                                                            <color key="textColor" systemColor="secondaryLabelColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
@@ -235,13 +234,20 @@
                             <constraint firstItem="UER-xf-KJA" firstAttribute="top" secondItem="u9W-FY-8ks" secondAttribute="top" id="yYk-CR-8x6"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="oHv-pr-g8a">
-                        <barButtonItem key="rightBarButtonItem" title="Item" image="insta_camera_btn" id="OGI-2i-DyV">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Feed" id="oHv-pr-g8a">
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="8ab-0E-9YW">
+                            <connections>
+                                <action selector="didLogout:" destination="wQU-bY-PZZ" id="1eF-x5-TKR"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" image="insta_camera_btn" id="OGI-2i-DyV">
                             <connections>
                                 <segue destination="rD7-NI-BYe" kind="show" identifier="showCamera" id="5Wd-5o-tdY"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="feedTableView" destination="UER-xf-KJA" id="LAi-B3-PDV"/>
                     </connections>
@@ -259,19 +265,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="3vC-IP-hKz">
-                                <rect key="frame" x="16" y="104" width="382" height="346.5"/>
+                                <rect key="frame" x="16" y="104" width="382" height="322"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="EX7-qG-Phi" appends="YES" id="ZVB-3Z-fWS"/>
                                 </connections>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add caption..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iAo-lm-Ha5">
-                                <rect key="frame" x="16" y="481" width="382" height="34"/>
+                                <rect key="frame" x="16" y="455.5" width="382" height="34"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7SH-F6-arL">
-                                <rect key="frame" x="16" y="523" width="382" height="36"/>
+                                <rect key="frame" x="16" y="497.5" width="382" height="36"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                 <state key="normal" title="Submit"/>
                                 <connections>
@@ -279,7 +285,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J6k-8N-OvL">
-                                <rect key="frame" x="207" y="567" width="0.0" height="0.0"/>
+                                <rect key="frame" x="207" y="541.5" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                 <color key="textColor" systemColor="systemRedColor"/>
                                 <nil key="highlightedColor"/>
@@ -382,6 +388,9 @@
         <image name="profile_tab" width="25" height="25"/>
         <systemColor name="opaqueSeparatorColor">
             <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
